# warehouse-ai-assistant

./: .env.example  .gitignore  HOW_TO_LAUNCH.md  IMPLEMENTATION_SUMMARY.md  MCP_ARCHITECTURE.md  PRESENTATION.md  PRESENTATION_CHEAT_SHEET.md  PRESENTATION_README.md  PRESENTATION_SLIDES_OUTLINE.md  QUICK_START.py  README.md  REQUIREMENTS_COMPLIANCE.md  generate_data.py  instructor_feedback.md  main.py  pyproject.toml  run_mcp_server.py  start_cli.bat  start_web.bat  test_mcp_server.py  test_sql_error_handling.py  web_app.py
.github/: copilot-instructions.md
.streamlit/: config.toml
data/: warehouse.db
docs/: Arize-Observability.md  Cycle_Count_Procedure.md  Equipment_Troubleshooting.md  MCP_ARCHITECTURE.md  Replenishment_Policy.md  Warehouse_Operations_Handbook.md
docs/Presentation/: PRESENTATION.md  PRESENTATION_DIAGRAMS.md  PRESENTATION_README.md  PRESENTATION_SLIDES_OUTLINE.md
src/: __init__.py
src/agents/: __init__.py  rag_agent.py  router.py  sql_agent.py  weather_agent.py
src/config/: __init__.py  settings.py
src/rag/: __init__.py  citation_validator.py  document_loader.py  vector_store.py
src/tools/: __init__.py  warehouse_mcp.py
tests/: __init__.py  test_rag_citation_validation.py
